--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,27 @@ To be resolved:
  - errors on types should show dynamic nested location in structure,
    not path in schema.
 
+version 1.22: Mon Jun 20 14:25:14 CEST 2011
+
+	Fixes:
+
+	- man-page of bin/schema2example told that the name of the
+	  program still was xml2example.
+
+	- template: show occurance of ANY elements.
+
+	- initialize XML::LibXML::Parser into safe mode.
+	  rt.cpan.org#68803 [Yann Kerherve]
+
+	Improvements:
+
+	- template: with restrictions on any and anyAttribute namespaces,
+	  show prefixes not full names except for the default namespace.
+
+	- template: correct example of simpleType list.
+
+	- template: remove superfluous element name from default/fixed/nil
+
 version 1.21: Fri Dec 24 10:20:15 CET 2010
 
 	Fixes:
@@ -33,6 +54,11 @@ version 1.20: Wed Dec 22 16:34:24 CET 2010
 	- ::Schema::compile(include_namespaces) with a personal filter will
 	  now be called for all known namespaces, not only the used
 	  namespaces. (Needed to reseolve qname problems)
+
+	Fixes:
+
+	- added missing formatter when both totalDigits and fractionDigits
+	  are restricted.  rt.cpan.org#63464 [mimoň-cz]
 
 	Improvements:
 
