--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,23 @@ To be resolved:
    affect the whole code and most tests.
  - errors on types should show dynamic nested location in structure,
    not path in schema.
+ - nillable support for mixed elements
+
+version 1.28: Sat Oct  6 13:38:15 CEST 2012
+
+	Changes:
+
+	- template: the type of the element is listed before other info.
+
+	Fixes:
+
+	- major rewrite on handling of nillable.
+	  rt.cpan.org #79986 [Karen Etheridge]
+
+	Improvements:
+
+	- writer: support for any blocks where the type keys is not
+	  specified as '{$ns}local', but as '$prefix:local'.
 
 version 1.27: Fri Aug 31 00:26:13 CEST 2012
 
@@ -35,7 +52,7 @@ version 1.27: Fri Aug 31 00:26:13 CEST 2012
 	  use with single value, not HASH.  Suggested by
 	  rt.cpan.org#79270 [Karen Etheridge]
 
-	- change implementation of XML::Compile::Schema::Namespaces
+	- changed implementation of XML::Compile::Schema::Namespaces
 	  autoexpand_xsi_type()
 
 version 1.26: Thu Aug 16 00:07:44 CEST 2012
