--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,16 @@ To be resolved:
  - nillable support for mixed elements
  - typemaps on basic types
 
+version 1.31: Thu Jan 24 15:33:04 CET 2013
+
+	Fixes:
+	- reader: elements after xsi:type elements.
+	  reported by [Lars Thegler]
+	- typos: rt.cpan.org#82919 [Joenio Marques da Costa]
+
+	Improvements:
+	- writer: support prefix notation with XSI_TYPE
+
 version 1.30: Mon Nov 26 09:28:10 CET 2012
 
 	Fixes:
