--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,11 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.34: Mon May 13 16:16:30 CEST 2013
+
+	Fixes:
+	- writer: fix <any> as only component of particle block.
+
 version 1.33: Fri May  3 10:02:27 CEST 2013
 
 	Fixes:
