--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,14 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.35: Fri Jun 28 16:15:48 CEST 2013
+
+	Fixes:
+	- use of element explicit 'form' qualifier.  Test in t/77form.t
+	  rt.cpan.org#86079 [Manfred Stock]
+	- type of element in substitutionGroup defaults to type of base,
+	  not anyType. [Mark Hofstetter]
+
 version 1.34: Mon May 13 16:16:30 CEST 2013
 
 	Fixes:
