--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,19 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.45: Mon Aug 11 09:16:56 CEST 2014
+
+	Fixes:
+	- reader: optional substitutionGroup's
+	- tests: disable t/03duration.t when tzset is not supported
+	  (Windows)  [cpantesters]
+	- remove default elements_qualified => 'TOP' [Ciaran Deignan]
+	- the nodePath is not unique enough for the cache, in case
+	  of [René Keldermann]  Requires XML::LibXML 2.0100
+
+	Improvements:
+	- use prefixes in $path (for errors) when known.
+
 version 1.44: Wed May 28 09:23:24 CEST 2014
 
 	Changes:
