--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,14 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.58: Tue 27 Jun 16:50:29 CEST 2017
+
+	Fixes:
+	- early facet on missing field [Bernhard Reutner-Fischer]
+
+	Improvements:
+	- move to Log::Report 1.20, which has considerable changes.
+
 version 1.57: Wed 14 Jun 14:48:18 CEST 2017
 
 	Fixes:
