start next release

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.61:
+
 version 1.60: Sun Mar  4 22:53:03 CET 2018
 
 	Fixes:
