--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ version 1.61:
 
 	Improvements:
 	- alternative output style for [Patrick Powell]
+	- explain use of CDATA in ::FAQ [Christopher Taranto]
 
 version 1.60: Sun Mar  4 22:53:03 CET 2018
 
