typo in module name

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
-version 1.61:
+version 1.61: Fri  9 Nov 10:51:04 CET 2018
 
 	Fixes:
 	- forgot to add README.md to GIT.
