start next release

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
+version 1.62:
+
 version 1.61: Fri  9 Nov 10:51:04 CET 2018
 
 	Fixes:
