--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ Plans and unwanted limitations? see README.todo
 
 version 1.62:
 
+	Fixes:
+	- empty list elements are not an error [Rob De Langhe]
+
 version 1.61: Fri  9 Nov 10:51:04 CET 2018
 
 	Fixes:
