--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ version 1.62:
 
 	Fixes:
 	- empty list elements are not an error [Rob De Langhe]
+	- facet date_whiteSpace [Ferruccio Zamuner]
 
 version 1.61: Fri  9 Nov 10:51:04 CET 2018
 
