--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,9 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
-version 1.63:
+version 1.64:
+
+version 1.63: Tue 02 Jul 2019 04:35:01 PM CEST
 
 	Improvements:
 	- dataToXML auto-detects XML string when it starts with a BOM.
