issue #4 spell fixes from Debian

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@ Plans and unwanted limitations? see README.todo
 
 version 1.64:
 
+	Improvements:
+	- #4 spell fixes from Debian [Utkarsh Gupta]
+
 version 1.63: Tue 02 Jul 2019 04:35:01 PM CEST
 
 	Improvements:
