--- a/ChangeLog
+++ b/ChangeLog
@@ -8,10 +8,13 @@ Plans and unwanted limitations? see README.todo
 
 version 1.64:
 
+	Fixes:
+	- accept empty groups.
+
 	Improvements:
 	- #4 spell fixes from Debian [Utkarsh Gupta]
 
-version 1.63: Tue 02 Jul 2019 04:35:01 PM CEST
+version 1.63: Tue 02 Jul 16:35:01 CEST 2019
 
 	Improvements:
 	- dataToXML auto-detects XML string when it starts with a BOM.
