schema2example has hard-coded Perl executable path in shebang #5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@ version 1.64:
 
 	Fixes:
 	- accept empty groups.
+	- #! of bin/schema2example [Andrius Merkys]
 
 	Improvements:
 	- #4 spell fixes from Debian [Utkarsh Gupta]
