--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ version 1.64:
 
 	Improvements:
 	- #4 spell fixes from Debian [Utkarsh Gupta]
+	- explain use of CDATA in WSDLs in the FAQ.
 
 version 1.63: Tue 02 Jul 16:35:01 CEST 2019
 
