additional element group tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ version 1.64:
 	- #4 spell fixes from Debian [Utkarsh Gupta]
 	- explain use of CDATA in WSDLs in the FAQ.
 	- template compact output sometimes removes a useless empty line.
+	- additional element group tests
 
 version 1.63: Tue 02 Jul 16:35:01 CEST 2019
 
