--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ Mark Overmeer.
 
 Plans and unwanted limitations? see README.todo
 
-version 1.64:
+version 1.64: Mon 21 Oct 15:39:09 CEST 2024
 
 	Fixes:
 	- accept empty groups.
